syntax = "proto3";
package carrier.discovery.v1;

message DiscoveryResponse {
    uint32 carrier_revision     = 1;
    string carrier_build_id     = 2;
    string application          = 3;
    string application_version  = 4;
    repeated string paths       = 5;
}

